# FashionVisualizer

./: .gitignore  AGENTS.md  README.md
luxflow-ai/: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
luxflow-ai/assets/catalog/: sample_catalog.json
luxflow-ai/assets/demo/: README.md  golden_empty_hand_recipe.json  golden_recipe.json
luxflow-ai/backend/: __init__.py
luxflow-ai/backend/app/: __init__.py  config.py  contracts.py  demo.py  main.py
luxflow-ai/backend/tests/: test_api_generate_artifacts.py  test_api_smoke.py  test_artifact_store.py  test_asset_registry.py  test_contracts.py  test_demo_routes.py  test_diffusers_generation_fallback.py  test_generation_dimensions.py  test_handbag_pipeline_composite.py  test_image_profiles.py  test_model_candidates.py  test_model_probe_results.py  (+7 more)
luxflow-ai/docs/: architecture.md  benchmark_results.md  benchmarking.md  composite_anchor_tuning_results.md  current_status.md  evaluation.md  hero_still_review_checklist.md  local_execution.md  model_access.md  model_probe_results.md  mvp_scope.md  pipeline.md  product_preservation.md  prompt_tuning_results.md  roadmap.md  synthetic_identity_provenance.md  tech_stack.md
luxflow-ai/frontend/: index.html  package-lock.json  package.json
luxflow-ai/scripts/: benchmark_models.py  compare_hero_and_composite.py  generate_placeholder_assets.py  generate_product_alpha_assets.py  probe_image_models.py  run_golden_demo.py  seed_sample_catalog.py  smoke_real_hero_still.py  tune_composite_anchors.py  tune_hero_prompts.py
(+66 files in other folders)
