[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luxflow-ai"
version = "0.1.0"
description = "Local-first workflow studio for product-preserving generative catalog videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlmodel",
  "python-dotenv",
  "pillow",
  "numpy",
  "typer",
  "rich",
  "httpx"
]

[project.optional-dependencies]
generation = ["diffusers", "transformers", "accelerate"]
video = ["moviepy"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend/app", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["backend.app"]
ignore_missing_imports = true
